Fixes button spacing.

--- a/devops/frontend/src/static/css/app.less
+++ b/devops/frontend/src/static/css/app.less
@@ -155,13 +155,13 @@
    ========================================================================== */
 
 // .btn overrides.
-.userbutton.btn,
-.repobutton.btn {
+.userbutton,
+.repobutton {
     margin: 0;
 }
 
 .userbutton {
-    margin-right: unit(6px / @btn-font-size, em) 0 0;
+    margin-right: unit(6px / @btn-font-size, em);
     // Fixes weirdness with the right edge of the text getting cropped.
     padding-right: 1px;
 }
